tests/fixtures/pass/try_option_none_propagate.sali
let stop(move value: Option(i32)): Option(i32) = {
  let item = value.try
  0
}

let main(): i32 = stop(Option(i32).None) ?? 42
